[package]
name = "aqua_troll_log_reader"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = "57.0"
arrow-csv = "57.0"
arrow-schema = "57.0"
chrono = "0.4"
csv = "1.3"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
itertools = "0.14"
num-derive = "0.4"
num-traits = "0.2"
quick-xml = "0.39"
scraper = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
strum = "0.27"
strum_macros = "0.27"
thiserror = "2.0"
tracing = "0.1"
zip = "7.2"

[[example]]
name = "convert_txt"

[[example]]
name = "convert_csv"

[[example]]
name = "convert_zipped_html"

[[example]]
name = "converter_cli"
